fixed z-index

--- a/app/styles.module.css
+++ b/app/styles.module.css
@@ -7,6 +7,7 @@
 
   display: flex;
   justify-content: center;
+  z-index: 999;
 }
 
 .container {
